# i3status-conf-rs

./: Cargo.toml
src/: input.rs  main.rs
src/dbus/: dbus_proxy.rs  loop_status.rs  metadata.rs  mod.rs  playback_status.rs
src/dbus/bluetooth/: battery.rs  controller.rs  mod.rs
src/dbus/spotify/: mod.rs
src/sections/: bpm.rs  mod.rs  time_duration.rs  time_progress_bar.rs  title_artist.rs
src/sections/bluetooth/: device.rs
src/sections/spotify/: bpm.rs  mod.rs  time_progress_bar.rs  title_artist.rs
