[package]
name = "i3status-rs-spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
futures = "0.3.26"
reqwest = { version = "0.11.14", features = ["json"] }
scraper = "0.15.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
unicode-segmentation = "1.10.1"
zbus = { version = "3.10.0", default-features = false, features = ["tokio"] }
